tried to fix intro images on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -715,3 +715,7 @@ textarea {
 .small {
     font-size:smaller;
 }
+
+img {
+  max-width:90%;
+}
